fix microservice categories

--- a/source/_posts/2023/03-25-无处不在的微服务.md
+++ b/source/_posts/2023/03-25-无处不在的微服务.md
@@ -2,7 +2,8 @@
 title: 无处不在的微服务
 date: 2023-03-25 15:23:00
 categories:
-- [分布式系统,微服务]
+- [分布式系统]
+- [微服务]
 tags:
 - 微服务
 ---
@@ -12,9 +13,9 @@ tags:
 
 - 微服务就是一些协同工作的小而自治的服务
 
-### 服务注册于与发现
+### 服务注册与发现
 
-- 微服务之间互相调用，服务发现需要管理各个服务的服务器地址，当进行扩容或摘除时能及时更新
+- 微服务之间互相调用，服务发现需要管理各个服务的服务器地址，当进行扩容或摘除时能及时更新
 
 ### 服务监控
 
@@ -79,7 +80,7 @@ tags:
 - 腾讯
 - 仅支持C++语言
 
-### Motan
+### Motan
 
 - 微博
 - 仅支持Java
@@ -98,7 +99,7 @@ tags:
 
 ### RPC（Remote Procedure Call）
 
-- 允许像调用本地函数一样调用另一个程序的函数（C/S模式）
+- 允许像调用本地函数一样调用另一个程序的函数（C/S模式）
 
 ### 微服务框架
 
